--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,9 @@ padding: 30px  0;
   text-transform: uppercase;
 }
 
-.description {margin-bottom:40px;}
+.description {
+  text-align: left;
+  margin-bottom:40px;}
 
 
 
@@ -416,7 +418,7 @@ text-align: center;
 margin-bottom:25px;
 }
 
-.description {
+.description-sedona {
   display: block;
   text-align: center;
 margin-bottom:25px;}
