--- a/css/style.css
+++ b/css/style.css
@@ -461,9 +461,11 @@ border-radius: 5px;
     font-size:0px;
   }
 
-  .selected:hover::before {
+  .web-sites:hover ::before {
     background:white url('../img/browserdark.jpg') no-repeat;
   }
+
+
 
 
    .web-sites {
@@ -474,6 +476,8 @@ border-radius: 5px;
      margin-right:46px;
      vertical-align: top;
      margin-bottom:20px;
+
+     background:red;
        }
 
     .web-sites-img::before { content: "";
@@ -481,6 +485,7 @@ border-radius: 5px;
     width:360px;
     height:40px;
     background: white url('../img/browserwhite.jpg') no-repeat;
+    line-height: 0px;
     }
 
   .selected .web-sites-img::before { content: "";
