--- a/css/style.css
+++ b/css/style.css
@@ -577,3 +577,102 @@ padding-right: 75px;}
   .map {margin-left: auto;
     margin-right: auto;
   }
+
+
+.popup-contact {
+  position:absolute;
+    left:50%;
+  margin-left:-480px;
+  top:1475px;
+  width:760px;
+  height:430px;
+  background:white;
+  padding: 75px 100px 85px;
+  box-shadow: 0px 30px 50px rgba(0,0,0, 0.7);
+  color:black;
+
+}
+
+.popup-contact-close {position:absolute;
+
+    right:70px;;
+    width:21px;
+    height:21px;
+    cursor:pointer;
+  font-size: 0px;
+  background: white url("../img/cross.png")  center;
+
+
+}
+
+form.popup-form {
+
+}
+
+h2 {
+  padding:0;
+  margin:0;
+}
+
+.popup-contact h2 {
+  margin-bottom: 45px;
+  font-size: 45px;
+}
+
+form.popup-form label{
+  font-weight: bold;
+  line-height:18px;
+
+}
+
+.top input[type="text"] {
+  width:100%;
+
+border:2px solid #d7dcde;
+padding:15px 13px;
+border-radius:5px;
+}
+
+.left-column {float:left;
+width:354px;
+margin-right: 10px;
+}
+
+.right-column {float:right;
+width:354px;}
+
+.top {
+  margin-bottom: 35px;
+}
+
+.bottom textarea{
+  resize: none;
+  width:100%;
+  min-height:115px;
+  border:2px solid #d7dcde;
+  border-radius:5px;
+  padding:13px 13px;
+    }
+
+    .bottom {
+      margin-bottom:47px;
+    }
+
+    .popup-form input[type="submit"]
+    {background:#fb565a;
+      color:white;
+  height:50px;  }
+
+
+
+.popup-form input[type="submit"]:hover {
+  background:#e74246;
+}
+
+.popup-form input[type="submit"]:active {
+  background:#d7373b;
+}
+
+ {
+
+}
